# AOC_2024

./: .pre-commit-config.yaml  Cargo.toml  README.md  Taskfile.yml  devbox.json
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
.devcontainer/zsh/: .gitignore  .zprofile  .zshrc
crates/aoc24/: .gitignore  Cargo.toml
crates/aoc24/src/: main.rs
crates/aoc24/src/days/: day01.rs  mod.rs
taskfiles/: _env.yml
